--- a/PracticalML_CourseProject.Rmd
+++ b/PracticalML_CourseProject.Rmd
@@ -8,13 +8,13 @@ knitr::opts_chunk$set(echo=TRUE, fig.path='Figures/', fig.width=10, fig.height=4
 ```
 
 ## Loading of needed libraries
-First load required libraries/variables/parameters needed for this project:
+First load randomForest library for this project:
 ```{r results = 'hide'}
 library(randomForest)
 ```
 
 ## Preparing/getting the data
-First, check if the file "activity.zip" exists in the repository. If not, download it. Then unzip and load data into data frame `data`. 
+Check if the files (both training and test data) exists in the repository. If not, download it. 
 ```{r}
 if(!file.exists("pml-training.csv")) {
         download.file("https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv","pml-training.csv")
